--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,5 @@ services:
       - "3306:3306"
     environment:
       - MYSQL_DATABASE=fx_deals_db
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=
-      - MYSQL_ROOT_PASSWORD=
+      - MYSQL_ALLOW_EMPTY_PASSWORD=1
+
